syntax = "proto3";
package pb;
option go_package = ".;pb";

message User {
  string id = 1;
  string name = 2;
  string email = 3;
}

message UserResultStream {
  string status = 1;
  User user = 2;
}

message Users {
  repeated User user = 1;
}

service UserService {
  rpc AddUserUnary (User) returns (User);
  rpc AddUserServerStream (User) returns (stream UserResultStream);
  rpc AddUsersClientStream (stream User) returns (Users);
  rpc AddUsersBidirectionalStream (stream User) returns (stream UserResultStream);
}